Jlinkで実行用exe作成 (#1)
* README.mdとbuild.gradleを更新し、Windows向けのapp-image作成手順を追加。Launcherクラスを新規作成し、アプリのエントリーポイントを定義。createWindowsAppImage.batを追加し、EXE直接起動用のスクリプトを作成。